tests/errors/int_to_rfm_m.td
component int_to_rfm_m 
{
  requires {
    interface counter_output input;
    interface send_msg send;
  }
}
